# polars_empty_bracket

./: Cargo.toml  empty_brackets.ndjson
src/: main.rs
